# expyriment

./: .git_export_subst  .gitattributes  .gitignore  .pre-commit-config.yaml  .release_info  CHANGES.md  CHANGES.txt  Makefile  README.md  README.md.orig  README.txt  build.py  documentation_requirements.txt  expyriment-cli  fullscreen_test.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.py  testsuite_test.py  tst.py  ttest.py
.github/workflows/: build_and_deploy.yml  build_and_deploy_dev  build_and_deploy_dev.yml
debian/: build_expyriment_deb.sh  build_package.sh  changelog  changelog.debian  control  copyright  python-expyriment.docs  python-expyriment.install  rules
debian/upstream/: metadata
documentation/: README.txt
documentation/api/: Makefile  create_api_reference.py  expyriment_doc_search.py  expyriment_doc_serach.py
documentation/sphinx/: APIReferenceTool.rst  Advanced.rst  Changelog.rst  CommandLineInterface.rst  DataPreprocessing.rst  Defaults.rst  Examples.rst  FAQ.rst  Fonts.rst  GettingStarted.rst  Hardware.rst  ImportDataIntoR.rst  Installation.Android.rst  Installation.Linux.rst  Installation.Linux.rst.orig  Installation.OSX.rst  Installation.Windows.rst  Installation.rst  Makefile  Overview.rst  Plugins.rst  PreviousVersions.rst  Problems.rst  Technical.rst  Testsuite.rst  Timing.rst  Tutorial.rst  Unicode.rst  Video.rst  conf.py  create_rst_api_reference.py  create_sitemap.py  index.rst  requirements.txt
documentation/sphinx/numpydoc/: docscrape.py  docscrape_sphinx.py  numpydoc.py
examples/: callback_functions.py  check-audio-visual-timing.py  csv_load_design.py  csv_save_design.py  line-bisection.py  moving_stimulus.py  really_short_exp.py  simon_task.py  snarc_data_preprocessing.py  snarc_experiment.py  word_fragment_completion_stimuluslist.csv  word_fragment_completion_task.py
expyriment/: __init__.py  __main__.py  _active.py  _api_reference_tool.py  _expyriment_types.py  _get_system_info.py  _globals.py  _importer_functions.py  _internals.py  _secure_hash.py  callback_functions.py  cli.py
expyriment/control/: __init__.py  _experiment_control.py  _miscellaneous.py  _test_suite.py  _test_suite.py.orig  defaults.py
expyriment/design/: __init__.py  _structure.py  defaults.py  permute.py  randomize.py
expyriment/design/extras/: __init__.py  _stimulationprotocol.py  _stimulationprotocol_defaults.py  defaults.py
expyriment/design/permute/: __init__.py  _permute.py
expyriment/design/randomise/: __init__.py  _randomise.py
expyriment/design/randomize/: __init__.py  _randomize.py
expyriment/io/: ._textinput.py.swp  ._touchscreen_buttonbox.py.swp  __init__.py  _eventbuttonbox.py  _files.py  _gamepad.py  _input_output.py  _keyboard.py  _markeroutput.py  _mouse.py  _parallelport.py  _screen.py  _serialport.py  _streamingbuttonbox.py  _textinput.py  _textmenu.py  _touchscreen_buttonbox.py  _touchscreenbuttonbox.py  _triggerinput.py  defaults.py
expyriment/io/_parallelport/: __init__.py  _dlportio.py  _inpout32.py  _linux.py
expyriment/io/extras/: __init__.py  _cedrusresponsedevice.py  _cedrusresponsedevice_defaults.py  _midiin.py  _midiin_defaults.py  _midiout.py  _midiout_defaults.py  _simpleparallelport.py  _tbvnetworkinterface.py  _tbvnetworkinterface_defaults.py  _tcpclient.py  _tcpclient_defaults.py  _tcpserver.py  _tcpserver_defaults  _turbosatorinetworkinterface.py  _turbosatorinetworkinterface_defaults.py  defaults.py
expyriment/misc/: __init__.py  __init__.py.orig  _buffer.py  _clock.py  _colour.py  _csv_reader_android.py  _get_system_info.py  _hsv_colour.py  _miscellaneous.py  _old_clock.py  _secure_hash.py  _timer.py  constants.py  data_preprocessing.py  defaults.py  geometry.py  statistics.py
expyriment/misc/data_preprocessing/: __init__.py  _data_preprocessing.py
expyriment/misc/extras/: __init__.py  defaults.py
expyriment/misc/geometry/: __init__.py  _basic_shapes.py  _geometry.py
expyriment/misc/statistics/: __init__.py  _statistics.py
expyriment/stimuli/: __init__.py  _audio.py  _blankscreen.py  _canvas.py  _circle.py  _dot.py  _ellipse.py  _fixcross.py  _frame.py  _line.py  _obsolete.py  _picture.py  _picture.py.orig  _rectangle.py  _shape.py  _stimulus.py  _textbox.py  _textline.py  _textscreen.py  _tone.py  _video.py  _visual.py  defaults.py
expyriment/stimuli/extras/: __init__.py  _dotcloud.py  _dotcloud_defaults.py  _gaborpatch.py  _gaborpatch_defaults.py  _lcdsymbol.py  _lcdsymbol_defaults.py  _noisetone.py  _noisetone_defaults.py  _polygondot.py  _polygondot_defaults.py  _polygonellipse.py  _polygonellipse_defaults.py  _polygonline.py  _polygonline_defaults.py  _polygonrectangle.py  _polygonrectangle_defaults.py  _randomdotkinematogram.py  _randomdotkinematogram_defaults.py  _stimuluscircle.py  (+9 more)
tools/: expyriment-cli  expyriment_data.R  expyriment_online_install_linux.sh  source_tarball_from_wheel.py
