[build-system]
requires = ["flit_core>=3.12,<4"]
build-backend = "flit_core.buildapi"

[project]
authors = [
  {name = "Florian Krause", email = "florian@expyriment.org"},
  {name = "Oliver Lindemann", email = "oliver@expyriment.org"},
]
description = 'A Python library for cognitive and neuroscientific experiments'
license = "GPL-3.0-or-later"
license-files=["COPYING.txt"]
name = "expyriment"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version"]
keywords = ["experiment control", "open science",
            "neuroscience", "experimental psychology"]
classifiers = [
  "Intended Audience :: Science/Research",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent"
]

dependencies = [
  "pygame>=2.5.2,<3",
  "pyopengl>=3,<4",
  "numpy>=1.6,<3",
  "pyserial>=3,<4",
  "pyparallel>=0.2,<1",
  "mediadecoder>=0.2.3,<1",
]

[project.urls]
"Bug Tracker" = "https://github.com/expyriment/expyriment/issues"
"Documentation" = "https://docs.expyriment.org/"
"Homepage" = 'https://expyriment.org/'

[project.scripts]
expyriment="expyriment.cli:main"
