[build-system]
requires = ["flit_core>=3.12,<4"]
build-backend = "flit_core.buildapi"

[project]
authors = [
  {name = "Florian Krause", email = "florian@expyriment.org"},
  {name = "Oliver Lindemann", email = "oliver@expyriment.org"},
]
description = 'A Python library for cognitive and neuroscientific experiments'
license = "GPL-3.0-or-later"
license-files=["COPYING.txt"]
name = "expyriment"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version"]
keywords = ["experiment control", "open science",
            "neuroscience", "experimental psychology"]
classifiers = [
  "Intended Audience :: Science/Research",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent"
]

dependencies = [
  "pygame>=2.5.2,<3",
  "pyopengl>=3,<4",
  "numpy>=1.6,<3",
  "pyserial>=3,<4",
  "pyparallel>=0.2,<1; sys_platform == 'linux'",
  "mediadecoder>=0.2.3,<1",
]

[project.urls]
"Bug Tracker" = "https://github.com/expyriment/expyriment/issues"
"Documentation" = "https://docs.expyriment.org/"
"Homepage" = 'https://expyriment.org/'

[project.scripts]
expyriment="expyriment.cli:main"

[tool.ruff.lint]
extend-select = [
    "B",
    "C4",
    "EXE",
    "PIE",
    "PYI",
    "SIM",
    "FLY",
    #"I",
    "PGH",
    "PLE",
    "PLW",
    "UP",
]
ignore = [
    "B018",
    "B026",
    "B904",
    "B905",
    "C417",
    "PIE790",
    "PIE808",
    "SIM102",
    "SIM103",
    "SIM105",
    "SIM108",
    "SIM114",
    "SIM115",
    "SIM117",
    "SIM118",
    "PLW0603",
    "PLW2901",
    "PLW0602",
    "E402",
    "E741",
    "F401",
    "F811",
    "F821",
    "F841",
    "PLW1641",
    "UP015",
    "UP030",
    "UP031",
    "UP032",
    "UP038",
]
